--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "type": "module",
   "name": "chessir",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Chess utilities and WebComponents",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Denis Borzenko (bars)",
   "license": "MIT",
@@ -23,5 +23,8 @@
   "dependencies": {
     "tokenizerflow": "^1.0.0",
     "event-target-shim": "^6.0.2"
+  },
+  "devDependencies": {
+    "mocha": "^9.2.0"
   }
 }
