--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "type": "module",
   "name": "chessir",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Chess utilities and WebComponents",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha ./src/**/*.test.js"
   },
   "author": "Denis Borzenko (bars)",
   "license": "MIT",
